--- a/lab4.Rmd
+++ b/lab4.Rmd
@@ -65,17 +65,28 @@ Otherwise, just go ahead and download the data.
 
 * If it is stored as a .csv file, you are all set to move forward.
 
-For these projects, all data will be stored in and accessed via GitHub, so that we need not worry about working with different file paths on our computers. To upload your dataset to GitHub, move the data to Documents > GitHub > STS115_Course_Project > datasets. FILL
+For these projects, all data will be stored in and accessed via GitHub so that we need not worry about working with different file paths and working directories on our computers. To upload your dataset to GitHub, move the data to Documents > GitHub > STS115_Course_Project > datasets. 
 
-There are a few ways to import data into RStudio. You should will be importing the data for
+I have made the hospitals dataset that we will be working with as an example throughout the quarter available in my GitHub repo. The Johns Hopkins team has made the case dataset available in their own GitHub repo. I can import both by reading these files in as a CSV. If you want to know why we are setting stringsAsFactors to FALSE ...it's a long story, which [this blog](https://simplystatistics.org/2015/07/24/stringsasfactors-an-unauthorized-biography/) tells much better than I could. 
 ```{r}
-setwd("/Users/lpoirier/Documents/GitHub/STS-115")
-hospitals <- read.csv("datasets/Hospitals.csv", stringsAsFactors = FALSE)
+hospitals <- read.csv("https://raw.githubusercontent.com/lindsaypoirier/STS-115/master/datasets/Hospitals.csv", stringsAsFactors = FALSE)
+
+cases <- read.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
+
+#Do not worry about this line of code for now. Since the cases data gets appended every day with a new column representing that day's case counts, if we want the total cases per country, we need to add up all of the previous day's counts into a new column. The column below does this for us. 
+cases <- 
+  cases %>% 
+  mutate(Total.Cases = 
+           cases %>% 
+           select(starts_with("X")) %>% 
+           rowSums()
+         ) %>%
+  select(Province.State, Country.Region, Total.Cases)
 ```
 
-
+Once your data is available in the datasets folder, you will need to access its URL. Navigate to your GitHub repo in a Web browser, and then follow the folder structure to your uploaded CSV file. On this page, you will see *either* a link in the center of a viewer window that says "View Raw" OR a button at the top of the viewer window that says "Raw". Click on this link or button. Copy and paste the URL of the page that you are directed to below. The format of this URL should look like this: "https://raw.githubusercontent.com/[REPO]/[FILE].csv". If it does not, then be sure to reach out to me for help. 
 ```{r}
-# Uncomment the line below. Create an appropriate variable name for your data frame, and fill the file name below to import the data into RStudio
+# Uncomment the line below. Create an appropriate variable name for your data frame, and fill the URL below to import the data into RStudio
 
 # _____ <- read.csv("______", stringsAsFactors=FALSE)
 ```
@@ -253,10 +264,11 @@ Null values should appear as a greyed-out and italicized *NA*. This communicates
 * "NONE"
 * "NOT AVAILABLE"
 
-In the hospitals dataset, we can see by calling View() that empty data is filled with the string "NOT AVAILABLE". We want to convert such values to NA values. 
+In the hospitals dataset, we can see by calling View() that empty data is filled with the string "NOT AVAILABLE". We want to convert such values to NA values. In the cases dataset, we can see that empty data is filled with an empty string "". We know this because empty rows values in the Province.State field are simply blank. We will also convert such values to NA values. 
 
 ```{r}
 is.na(hospitals) <- hospitals == "NOT AVAILABLE"
+is.na(cases) <- cases == ""
 ```
 
 Where appropriate, convert values to NA in your own dataset. 
@@ -271,9 +283,11 @@ Where appropriate, convert values to NA in your own dataset.
 #is.na(_____) <- _____ == "_____" 
 ```
 
-### Do you have any dates in your dataset? (By this I mean specific dates, not just months or just years). 
+### Do you have any variables in your dataset that refer to specific dates? 
 
 If not, skip to the next heading.
+
+> Note that while the headings in the cases dataset refer to dates, these are not date variables. Here dates are simply serving as a header for other data. The values stored in those variables refer to counts of cases (i.e. numbers) not dates. 
 
 Dates can be converted to a date format using the lubridate package. This is a package in the Tidyverse that makes it possible to extract specific information (such as month or year) from dates, and to compute with dates.
 
@@ -323,7 +337,7 @@ At this point in the assignment, we will begin exploring and getting to know you
 
 > Note that you may not be able to list three of each below. 
 
-*Nominal categorical variables* are variables that identify something else. They name or categorize something that exists in the world. Sometimes, nominal categorical variables are obvious. For instance, in the hospitals dataset, the hospital NAME is a nominal categorical variable - referring to the actual hospital. CITY is also a nomical categorical variable - referring to the hospital's city. The hospital TYPE and OWNER are all categorical variable - referring to specific categories the hospital is classed within. However, nominal categorical variables are not always strings. *Sometimes, numbers are considered nominal categorical variables.* For instance, a ZIP code is not a value that we operate on but instead refers to a certain place; it is a nominal categorical variable. In the hospitals dataset, the NAICS_CODE is a numeric reference to a particular industry classification; it is also a nominal categorical variable. Both OBJECTID and ID are nominal categorical variables referring to the hospital. 
+*Nominal categorical variables* are variables that identify something else. They name or categorize something that exists in the world. Sometimes, nominal categorical variables are obvious. For instance, in the hospitals dataset, the hospital NAME is a nominal categorical variable - referring to the actual hospital. CITY is also a nominal categorical variable - referring to the hospital's city. The hospital TYPE and OWNER are all categorical variable - referring to specific categories the hospital is classed within. However, nominal categorical variables are not always strings. *Sometimes, numbers are considered nominal categorical variables.* For instance, a ZIP code is not a value that we operate on but instead refers to a certain place; it is a nominal categorical variable. In the hospitals dataset, the NAICS_CODE is a numeric reference to a particular industry classification; it is also a nominal categorical variable. Both OBJECTID and ID are nominal categorical variables referring to the hospital. 
 
 List three nominal categorical variables in your dataset. Use **select()** to select these variables in your dataset, and use **head(10)** to limit the display to the first 10 rows.
 ```{r}
@@ -338,7 +352,7 @@ hospitals %>% select(OBJECTID, ID, NAME, COUNTY, NAICS_CODE, TYPE) %>% head(10)
 
 ```
 
-*Ordinal categorical variables* are categorical variables that can be ranked or placed in a particular order. For instance, 'High', 'Medium', and 'Low' have a particular order. In the hospitals dataset, there is one ordinal categorical variable - TRAUMA, which characterizes the hospital's trauma level designation. Trauma level designations indicate the extent of resources available at a hospital to deal with certain categories of trauma. It is most often broken into Level I through Level V. We can see how a data analyst may want to place trauma categories in a particular order (for instance, ordering hospitals from highest to lowest trauma levels). However, this is a particularly complictated categorical variable to work with. This is because Trauma levels are not defined according to a national standard. Instead, they are defined on a state-by-state basis, and our dataset spans all US states. Level II in one state might mean something different than Level II in another state despite both being labeled Level II in the dataset. Further, a single hospital can have multiple trauma levels (e.g. Level I Pediatric and Level II Adult). We would need to take all of this into consideration when comparing trauma levels across hospitals on a national scale.
+*Ordinal categorical variables* are categorical variables that can be ranked or placed in a particular order. For instance, 'High', 'Medium', and 'Low' have a particular order. In the hospitals dataset, there is one ordinal categorical variable - TRAUMA, which characterizes the hospital's trauma level designation. Trauma level designations indicate the extent of resources available at a hospital to deal with certain categories of trauma. It is most often broken into Level I through Level V. We can see how a data analyst may want to place trauma categories in a particular order (for instance, ordering hospitals from highest to lowest trauma levels). However, this is a particularly complicated categorical variable to work with. This is because Trauma levels are not defined according to a national standard. Instead, they are defined on a state-by-state basis, and our dataset spans all US states. Level II in one state might mean something different than Level II in another state despite both being labeled Level II in the dataset. Further, a single hospital can have multiple trauma levels (e.g. Level I Pediatric and Level II Adult). We would need to take all of this into consideration when comparing trauma levels across hospitals on a national scale.
 
 List three ordinal categorical variables in your dataset. Use **select()** to select these variables in your dataset, and use **head(10)** to limit the display to the first 10 rows. 
 ```{r}
@@ -353,7 +367,7 @@ hospitals %>% select(TRAUMA) %>% head(10)
 
 ```
 
-*Discrete numeric variables* are numeric variables that represent something that is countable - the number of students in a classroom, the number pages in a book, the number of beds in a hospital. In the hospitals dataset, POPULATION, BEDS, and assumably TTL_STAFF (though it's all empty in our dataset), are all discrete numeric variables because they represent things that have been counted. 
+*Discrete numeric variables* are numeric variables that represent something that is countable - the number of students in a classroom, the number pages in a book, the number of beds in a hospital. In the hospitals dataset, POPULATION, BEDS, and presumably TTL_STAFF (though it's all empty in our dataset), are all discrete numeric variables because they represent things that have been counted. 
 
 List three discrete numerical variables in your dataset. Use **select()** to select these variables in your dataset, and use **head(10)** to limit the display to the first 10 rows.
 ```{r}
@@ -382,18 +396,93 @@ hospitals %>% select(LATITUDE, LONGITUDE) %>% head(10)
 #_____ %>% select(_____, _____, _____) %>% head(10)
 ```
 
+### What makes each observation in your dataset unique?
+
+An important first step to working with a rectangular dataset is identifying a variable or set of variables than can serve as a unique key for the data. A *unique key* is a variable (or set of variables) that uniquely identifies an observation in the dataset. Think of a unique key as a way to identify a row and all of the values in it. There should never be more than one row with the same unique key.
+
+In the hospitals dataset, the unique key is a bit more obvious. There is a variable called OBJECTID that uniquely refers to the geographic coordinates in the dataset, and there is a variable called ID that uniquely refers to the hospital in the dataset. We can confirm that these are indeed unique keys by counting the number of **distinct()** (or non-repeating) values in this variable and making sure it is equal to the number of rows in the entire dataset. If the distinct values in the variable is equal to the number of rows in the dataset, then we know that the key never repeats and that it can uniquely identify each row. 
+
+```{r}
+# Count the distinct values in your unique key
+n_unique_keys <- 
+  hospitals %>% 
+  select(ID) %>% 
+  n_distinct()
+
+# Count the rows in your dataset
+n_rows <- nrow(hospitals)
+
+# Make sure these numbers are equal
+n_unique_keys == n_rows
+```
+
+The ID field refers to a hospital so in this dataset a hospital is what makes each observation unique. 
+
+> Note that NAME is typically not an appropriate variable to use as a unique key. Let me provide an example to demonstrate this. When I worked for BetaNYC, I was trying to build a map of vacant storefronts in NYC by mapping all commercially zoned properties in the city, and then filtering out those properties where a business was licensed or permitted. This way the map would only include properties where there wasn't a business operating. One set of businesses I was filtering out was restaurants. The only dataset that the city had made publicly available for restaurant permits was broken. It was operating on an automated process to update whenever there was a change in the permit; however, whenever a permit was updated, rather than updating the appropriate fields in the existing dataset, it was creating a new row in the dataset that only included the permit holder (the restaurant name), the permit type, and the updated fields. Notably the unique permit ID was not being included in this new row. We pointed this issue out to city officials, but fixing something like this can be slow and time-consuming, so in the meantime, we looked into whether we could clean the data ourselves by aggregating the rows that referred to the same restaurant. However, without the permit ID it was impossible to uniquely identify the restaurants in the dataset. Sure, we had the restaurant name, but do you know how many Wendy's there are in NYC?
+
+In the cases dataset, the unique ID is less obvious. Because there are multiple provinces listed for each country (but not for all countries), we can't rely on country to uniquely identify each row. 
+```{r}
+# Count the distinct values in your unique key
+n_unique_keys <- 
+  cases %>% 
+  select(Country.Region) %>% 
+  n_distinct()
+
+# Count the rows in your dataset
+n_rows <- nrow(cases)
+
+# Make sure these numbers are equal
+n_unique_keys == n_rows
+```
+Instead, we need to rely on both the country and province to uniquely identify each row. 
+
+```{r}
+# Count the distinct values in your unique key
+n_unique_keys <- 
+  cases %>% 
+  select(Country.Region, Province.State) %>% 
+  n_distinct()
+
+# Count the rows in your dataset
+n_rows <- nrow(cases)
+
+# Make sure these numbers are equal
+n_unique_keys == n_rows
+```
+
+Why is this so important? Later we are going to perform calculations across observations in the dataset. When we do so, we assume that all of the observations in the dataset are reported at the same scale. For instance, imagine if we want to know the average number of Covid-19 cases reported across the globe. Before we take the average of all the values reported in the Total.Cases column of the cases dataset, we need to remember that some cases are reported at just the country scale and some are reported at the more specific province scale. We would need to transform our data so that each observation represented a country total before taking this average, or else we would be averaging data at different geographic scales. 
+
+What makes each observation in your dataset unique?
+
+```{r eval=FALSE}
+Fill your response here. 
+```
+
+Confirm that you are correct below. 
+
+```{r}
+# Uncomment and count the distinct values in your unique key
+#n_unique_keys <- _____ %>% select(_____) %>% n_distinct()
+
+# Uncomment and count the rows in your dataset
+#n_rows <- nrow(_____)
+
+# Uncomment and make sure these numbers are equal
+# n_unique_keys == n_rows
+```
+
 ### Summary
 
 > This section of the assignment is going to ask you to draw insights about your dataset after calling certain functions. When I ask you to draw an insight, I’m not asking you to describe what the function does or to state the results that you get. Instead I’m asking you to interpret those results and consider what this might tell us about the issues represented in the dataset or if it might signal issues of data quality. For instance, stating “the maximum value in the age column is 999,” is not an insight. Instead you should say, “the maximum value in the age column is 999, which is much higher than I would expect and may signal that the data was input wrong or that the data collectors at using 999 to represent null values.”
 
-Calling **summary()** on a data frame returns summary statistics for each of the variables in that data frame. For numeric values, it returns the min, max, median, 1st and 3rd quartiles, mean, and number of NAs. We will go over each of these values more in two weeks. 
+Calling **summary()** on a data frame returns summary statistics for each of the variables in that data frame. For numeric values, it returns the min, max, median, 1st and 3rd quartiles, mean, and number of NAs. We will go over each of these values more in two weeks. Plus, we have a lot more work to do before we can take any of these numbers at face value. At this point, we are simply looking for values that immediately appear off. 
 
 ```{r}
 #df %>% summary()
 hospitals %>% summary()
 ```
 
-One thing that should jump out at us right away in scanning the summary of the hospitals dataset is that the min for all of our discete numeric values is -999. How is it possible to count -999 beds? This signals to us that -999 is being used to indicate that data is not available. We can confirm this in the data dictionary. In fact, quite often -999 is used to indicate null values. Let's go ahead and convert all of the instances of -999 to NA.
+One thing that should jump out at us right away in scanning the summary of the hospitals dataset is that the min for all of our discrete numeric values is -999. How is it possible to count -999 beds? This signals to us that -999 is being used to indicate that data is not available. We can confirm this in the data dictionary. In fact, quite often -999 is used to indicate null values. Let's go ahead and convert all of the instances of -999 to NA.
 
 ```{r}
 is.na(hospitals) <- hospitals == -999
@@ -416,14 +505,6 @@ Summarize the values in each variable in your data frame.
 #_____ %>% select(c(_____, _____, _____)) %>% summary()
 ```
 
-List three insights that you can draw from calling summary(). These insights may be conclusions that you immediately draw about something that is going on in your dataset or questions that you are left with. You may consider the range (from max to min) of numeric values in a particular column, the difference between the median and the mean, or the number of NAs that appear. Are you surprised at any of the values or do the numbers make sense?
-
-```{r eval=FALSE}
-1. 
-2.
-3.
-```
-
 Have you identified any areas where you may need to conduct more cleaning? Email me if you are unsure of how to address this issue. 
 ```{r eval=FALSE}
 Fill response here. 
@@ -431,7 +512,7 @@ Fill response here.
 
 ### Values in a Key Categorical Variable
 
-**distinct()** lists each of the unique values that appears within a variable. This can be useful for determining how different issues are classified in the data. **n_distinct()** counts the number of distinct values in a variable. This let's us know how many categories we are dealing with. For instance, I can find out the distinct types of hospitals as well as how many distinct types there are by calling:
+When called on a specific variable, **distinct()** lists each of the unique values that appears within that variable. This can be useful for determining how different issues are classified in the data. **n_distinct()** counts the number of distinct values in a variable. This let's us know how many categories we are dealing with. For instance, I can find out the distinct types of hospitals as well as how many distinct types there are by calling:
 
 ```{r}
 #df %>% select(VARIABLE_NAME) %>% distinct()
@@ -442,7 +523,7 @@ hospitals %>% select(TYPE) %>% n_distinct()
 
 Often in ethnography, it is our job to take something that seems obvious or familiar to us and to question it as if it were strange. When running the function above, we may ask why values are categorized the way that they are - even if those categories seem obvious at first glance. 
 
-> For instance, in the hospitals dataset, we might ask why it is that we have separate categories for different types of hospitals. With just a bit of research, we find that there is rich history behind these hospital types. For instance, "critical access hospitals" was a designation created in 1997 to improve access to hospitals in rural parts of the US, following an almost two-decade long wave of hospital closures in rural communities. See this [source](https://www.ruralhealthinfo.org/topics/critical-access-hospitals). Psychiatric hospitals, while following a similar timeline to the development of general hospitals in the US, developed in response to changing attitudes and understandings of what it meant to be mentally ill. In the 18th century, mental illness was often considered a moral or spiritual shortcoming; however, the increased emphasis on *moral treatment* of mentally ill patients ushered in a new wave of insitutions and wards devoted to the treatment of such patients. See this [source](https://www.nursing.upenn.edu/nhhc/nurses-institutions-caring/history-of-psychiatric-hospitals/).
+> For instance, in the hospitals dataset, we might ask why it is that we have separate categories for different types of hospitals. With just a bit of research, we find that there is rich history behind these hospital types. For instance, "critical access hospitals" was a designation created in 1997 to improve access to hospitals in rural parts of the US, following an almost two-decade long wave of hospital closures in rural communities. See this [source](https://www.ruralhealthinfo.org/topics/critical-access-hospitals). Psychiatric hospitals, while following a similar timeline to the development of general hospitals in the US, developed in response to changing attitudes and understandings of what it meant to be mentally ill. In the 18th century, mental illness was often considered a moral or spiritual shortcoming; however, the increased emphasis on *moral treatment* of mentally ill patients ushered in a new wave of institutions and wards devoted to the treatment of such patients. See this [source](https://www.nursing.upenn.edu/nhhc/nurses-institutions-caring/history-of-psychiatric-hospitals/).
 
 Let's check a second variable in the hospitals dataset.
 
@@ -491,7 +572,7 @@ Reflect on the categorization. How are the categories divided? Do any of the cat
 Fill your response here. 
 ```
 
-### NAs
+### Missing Data
 
 Check the number of NAs in each variable in your dataset by filling in the blanks in the commented code below.
 
@@ -667,7 +748,7 @@ What insight can you draw from counting?
 Fill your response here. 
 ```
 
-Sometimes, we want to do more than count the number of variables in each grouping. For instance, we may want to group the variables and then perform a calculation within each group. In such cases, we can call **group_by()** to aggregate the observations with common variable values into groups. Then we will call **summarize()** to perform a calculation within each of those groups. **summarize()** takes a set of values and a calculation method and returns a single value. For instance, if we call summarize() with a numeric column in our dataset and "mean" as a calcuation method, it will return the average of all the numeric values in that column. When called in conjunction with group_by(), it takes a set of values for each group and a calculation method and returns a single value for each group. 
+Sometimes, we want to do more than count the number of variables in each grouping. For instance, we may want to group the variables and then perform a calculation within each group. In such cases, we can call **group_by()** to aggregate the observations with common variable values into groups. Then we will call **summarize()** to perform a calculation within each of those groups. **summarize()** takes a set of values and a calculation method and returns a single value. For instance, if we call summarize() with a numeric column in our dataset and "mean" as a calculation method, it will return the average of all the numeric values in that column. When called in conjunction with group_by(), it takes a set of values for each group and a calculation method and returns a single value for each group. 
 
 For the hospitals dataset, we will group the observations by STATE and then use summarize to calculate the sum of BEDS per state. 
 
@@ -683,7 +764,7 @@ Select a numeric variable in your dataset to summarize by the same variable that
 #_____ %>% group_by(_____) %>% summarize(_____ = _____(_____, na.rm = TRUE)) %>% ungroup()
 ```
 
-> Notice that I close each of these calls with **ungroup()**. When we group_by() a variable, any subsequent function calls will continue to be performed on the grouped data, unless we ungroup() it. This can be important if we want to filter to specific values after we summarize() the data. Assuming that we don't want to perform a filter operation within each group but on the entire new dataframe created after summarzing, we need to ungroup() the data before performing the filter() operation. In the function calls above, it is not as important to call ungroup() because we are not performing more functions after summarizing. However, I left the call in so that we can get in the habit of remembering to ungroup() when appropriate. 
+> Notice that I close each of these calls with **ungroup()**. When we group_by() a variable, any subsequent function calls will continue to be performed on the grouped data, unless we ungroup() it. This can be important if we want to filter to specific values after we summarize() the data. Assuming that we don't want to perform a filter operation within each group but on the entire new dataframe created after summarizing, we need to ungroup() the data before performing the filter() operation. In the function calls above, it is not as important to call ungroup() because we are not performing more functions after summarizing. However, I left the call in so that we can get in the habit of remembering to ungroup() when appropriate. 
 
 What insight can you draw from grouping and summarizing?
 
